<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Screen Timout Settings</string>
    <string name="watch_service_activity">Screen Timout Service</string>
    <string name="alternate_title">Service and settings to configure the screen timeout</string>

    <string name="menu_about">About</string>
    <string name="checkboxAutoSetScreenBrightness">Auto brightness</string>
    <string name="textviewChargingScreenBrightness">Brightness</string>
    <string name="editTextStatusHint">Status</string>
    <string name="prompt_unknown_status">Unknown</string>
    <string name="sectionPluggedSettings">Charging settings</string>
    <string name="sectionUnpluggedSettings">Discharging settings</string>
    <string name="sectionInfo">Info</string>
    <string name="emptyTime">00:00:00</string>
    <string name="automatic_brightness">Automatic brightness</string>
    <string name="iconContentDescription">Icon</string>
    
    
    <!-- NumberPicker - accessibility support -->
    <!-- Description of the button to increment the NumberPicker value. [CHAR LIMIT=NONE] -->
    <string name="number_picker_increment_button">Increment</string>
    <!-- Description of the button to decrement the NumberPicker value. [CHAR LIMIT=NONE] -->
    <string name="number_picker_decrement_button">Decrement</string>
    <!-- Description of the tap and hold action to get into scroll mode in NumberPicker. [CHAR LIMIT=NONE] -->
    <string name="number_picker_increment_scroll_mode"><xliff:g id="value" example="3">%s</xliff:g> tap and hold.</string>
    <!-- Description of the scrolling action in NumberPicker. [CHAR LIMIT=NONE] -->
    <string name="number_picker_increment_scroll_action">Slide up to increment and down to decrement.</string>
    
    <!-- TimePicker - accessibility support -->
    <!-- Description of the button to increment the TimePicker's second value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_second_button">Increment second</string>
    <!-- Description of the button to decrement the TimePicker's second value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_second_button">Decrement second</string>
    <!-- Description of the button to increment the TimePicker's minute value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_minute_button">Increment minute</string>
    <!-- Description of the button to decrement the TimePicker's minute value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_minute_button">Decrement minute</string>
    <!-- Description of the button to increment the TimePicker's hour value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_hour_button">Increment hour</string>
    <!-- Description of the button to decrement the TimePicker's hour value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_hour_button">Decrement hour</string>
    <!-- Description of the button to increment the TimePicker's set PM value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <!-- Description of the button to decrement the TimePicker's set AM value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_set_am_button">Set AM</string>
</resources>
