<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_horizontal|fill_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_vertical"
        android:text="@string/sectionPluggedSettings"
        android:textAllCaps="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_contrast" />

    <CheckBox
        android:id="@+id/checkBoxAutoSetScreenBrightnessWhenCharging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkboxAutoSetScreenBrightness" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewChargingScreenBrightness" />

    <SeekBar
        android:id="@+id/seekBarScreenBrightnessWhenCharging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextStatusHint" />

    <Spinner
        android:id="@+id/spinnerCurrentStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/prompt_unknown_status" />

    <TextView
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="46dp"
        android:text="@string/sectionUnpluggedSettings"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_contrast" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_unknown_status" />

</LinearLayout>
